# nebula-go

./: .gitignore  BUILD.bazel  Gopkg.toml  Makefile  README.md  WORKSPACE  main.go
bins/nebula-gbc-go/: BUILD.bazel  main.go
data/: BUILD.bazel
pkg/common/bitfields/: BUILD.bazel  bit_proxy.go  bit_proxy_test.go  byte.go  byte_test.go  flag.go  flag_test.go
pkg/common/bitwise/: BUILD.bazel  bit.go  bit_test.go  convert.go  convert_test.go  get.go  get_test.go  inverse_mask.go  inverse_mask_test.go  mask.go  mask_test.go  set.go  set_test.go
pkg/common/clock/: BUILD.bazel  clock.go  clock_test.go
pkg/common/frontends/: BUILD.bazel  sdl.go  sdl_test.go  t.go
pkg/gbc/graphics/: BUILD.bazel  bgw_tile.go  bgw_tile_test.go  cgb_tile.go  cgb_tile_test.go  dmg_tile.go  dmg_tile_test.go  gpu.go  gpu_cycles.go  gpu_cycles_test.go  gpu_draw_line.go  gpu_draw_line_test.go  load_sprites_for_line.go  load_sprites_for_line_test.go  pacer.go  pacer_test.go  suite_test.go  tile.go  tile_attributes.go  tile_attributes_test.go  tile_test.go
pkg/gbc/graphics/lib/: BUILD.bazel  screen_size.go  screen_size_test.go
pkg/gbc/joypad/: BUILD.bazel  joypad.go  joypad_test.go  suite_test.go
pkg/gbc/memory/: BUILD.bazel  access_type.go  mbc.go  mbc1.go  mmu.go  mmu_errors_wrapper.go  mmu_errors_wrapper_test.go  mmu_hook.go  mmu_hook_test.go  mmu_read.go  mmu_read_test.go  mmu_registers.go  mmu_test.go  mmu_write.go  mmu_write_test.go  ram_size.go  ram_size_test.go  rom_destination.go  rom_destination_test.go  rom_size.go  rom_size_test.go  rom_type.go  rom_type_test.go
pkg/gbc/memory/cartridge/: BUILD.bazel  errors.go  header_checksum.go  header_checksum_test.go  load.go  load_data.go  load_data_test.go  load_test.go  mbc_selector.go  mbc_selector_test.go  nintendo_logo.go  nintendo_logo_test.go  ram_size.go  ram_size_test.go  rom.go  rom_market.go  rom_market_test.go  rom_size.go  rom_size_test.go  rom_title.go  rom_title_test.go  rom_type.go  rom_type_test.go  validation.go  validation_test.go
pkg/gbc/memory/lib/: BUILD.bazel  access_type.go  errors.go  hook.go  memory_io.go  ram_size.go  ram_size_test.go  rom_market.go  rom_market_test.go  rom_size.go  rom_size_test.go  rom_type.go  rom_type_test.go
pkg/gbc/memory/mbcs/: BUILD.bazel  errors.go  mbc.go  mbc1.go  mbc1_test.go  mbc2.go  mbc3.go  mbc5.go  mbc_wrapper.go  mbc_wrapper_test.go  rom_only.go  rom_only_test.go  selector.go  selector_test.go  suite_test.go
pkg/gbc/memory/registers/: BUILD.bazel  bit_proxy.go  bit_proxy_test.go  byte.go  byte_test.go  cgb_palette_index.go  cgb_palette_index_test.go  cgb_palette_reg.go  cgb_palette_reg_test.go  dbyte.go  dbyte_split_byte.go  dbyte_split_byte_test.go  dbyte_test.go  div_reg.go  div_reg_test.go  dma_reg.go  dmg_palette_color_shade.go  dmg_palette_color_shade_test.go  dmg_palette_reg.go  dmg_palette_reg_test.go  flag.go  flag_test.go  hdma_regs.go  hdma_regs_test.go  interrupt_flag.go  interrupt_reg.go  interrupt_reg_test.go  joyp_reg.go  joyp_reg_test.go  key1_reg.go  key1_reg_test.go  lcdc_reg.go  lcdc_reg_test.go  obj_size_flag.go  obj_size_flag_test.go  stat_mode_bit_proxy.go  stat_mode_bit_proxy_test.go  stat_modes.go  stat_reg.go  stat_reg_test.go  (+11 more)
pkg/gbc/memory/registers/lib/: BUILD.bazel  bit_proxy.go  bit_proxy_test.go  byte.go  byte_test.go  byte_with_errors.go  byte_with_errors_test.go  flag.go  flag_test.go  thread_safe_byte.go  thread_safe_byte_test.go
pkg/gbc/memory/segments/: BUILD.bazel  address_range.go  address_range_test.go  banks_config.go  banks_config_test.go  errors.go  options.go  segment.go  segment_test.go
pkg/gbc/z80/: BUILD.bazel  interrupts.go  interrupts_test.go  suite_test.go  z80.go  z80_test.go
pkg/gbc/z80/lib/: BUILD.bazel  flags.go  flags_test.go  interrupt.go  interrupt_test.go  registers.go  registers_test.go
pkg/gbc/z80/opcodes/: BUILD.bazel  factory.go  suite_test.go
pkg/gbc/z80/opcodes/alu/: BUILD.bazel  factory.go  logical_adc.go  logical_adc_test.go  logical_add.go  logical_add_test.go  logical_and.go  logical_and_test.go  logical_compare.go  logical_compare_test.go  logical_decrement.go  logical_decrement_test.go  logical_helpers.go  logical_increment.go  logical_increment_test.go  logical_or.go  logical_or_test.go  logical_sbc.go  logical_sbc_test.go  logical_sub.go  logical_sub_test.go  logical_xor.go  logical_xor_test.go  suite_test.go
pkg/gbc/z80/opcodes/controlflow/: BUILD.bazel  call.go  call_test.go  factory.go  helpers.go  jump.go  jump_relative.go  jump_relative_test.go  jump_test.go  return.go  return_test.go  suite_test.go
pkg/gbc/z80/opcodes/lib/: BUILD.bazel  add_relative_const.go  opcode.go  spr8_to_dbyte.go
pkg/gbc/z80/opcodes/load/: BUILD.bazel  a_to_address.go  a_to_address_test.go  address_to_a.go  address_to_a_test.go  const_to_reg.go  const_to_reg_test.go  factory.go  high_ram.go  high_ram_test.go  hl_ptr.go  hl_ptr_test.go  reg_to_reg.go  reg_to_reg_test.go  stack.go  stack_test.go  suite_test.go
pkg/gbc/z80/opcodes/misc/: BUILD.bazel  ccf.go  ccf_test.go  cpl.go  cpl_test.go  daa.go  daa_test.go  factory.go  halt.go  halt_test.go  interrupts.go  interrupts_test.go  noop.go  noop_test.go  rla.go  rla_test.go  rlca.go  rlca_test.go  rra.go  rra_test.go  rrca.go  rrca_test.go  scf.go  scf_test.go  stop.go  stop_test.go  suite_test.go
pkg/gbc/z80/opcodes/misc/cb/: BUILD.bazel  cb.go  cb_test.go  factory.go  helpers.go  reset_bit.go  reset_bit_test.go  rl.go  rl_test.go  rlc.go  rlc_test.go  rr.go  rr_test.go  rrc.go  rrc_test.go  set_bit.go  set_bit_test.go  sla.go  sla_test.go  sra.go  sra_test.go  srl.go  srl_test.go  suite_test.go  swap.go  swap_test.go  test_bit.go  test_bit_test.go
pkg/gbc/z80/opcodes/testhelpers/: BUILD.bazel  suite.go
pkg/gbc/z80/registers/: BUILD.bazel  byte.go  flags.go  flags_test.go  registers.go  registers_test.go
pkg/gbc/z80/registers/lib/: BUILD.bazel  byte.go  byte_test.go  dbyte.go  dbyte_split_byte.go  dbyte_split_byte_test.go  dbyte_test.go  flag.go  flag_test.go
tools/: build-vendor.sh  generate-bazel-mocks-code.sh  patch-sdl-BUILD-bazel-file.sh
(+5 files in other folders)
