load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "nebula-gbc-go",
    data = [
        "//data:roms",
    ],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "nebula-go/bins/nebula-gbc-go",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/gbc/memory:go_default_library",
        "//pkg/gbc/z80:go_default_library",
        "@com_github_pkg_profile//:go_default_library",
    ],
)
