load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bit_proxy.go",
        "byte.go",
        "flag.go",
    ],
    importpath = "nebula-go/pkg/common/bitfields",
    visibility = ["//visibility:public"],
    deps = ["//pkg/common/bitwise:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "bit_proxy_test.go",
        "byte_test.go",
        "flag_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
