load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bit.go",
        "inverse_mask.go",
        "mask.go",
    ],
    importpath = "nebula-go/pkg/common/bitwise",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "bit_test.go",
        "inverse_mask_test.go",
        "mask_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
