load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["joypad.go"],
    importpath = "nebula-go/pkg/gbc/joypad",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/common/frontends:go_default_library",
        "//pkg/gbc/memory:go_default_library",
        "//pkg/gbc/memory/registers:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "joypad_test.go",
        "suite_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/common/frontends:go_default_library",
        "//pkg/common/frontends:go_mocks_library",
        "//pkg/common/ptr:go_default_library",
        "//pkg/gbc/memory:go_default_library",
        "//pkg/gbc/memory:go_mocks_library",
        "//pkg/gbc/memory/registers:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
