load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["mmu.go"],
    importpath = "nebula-go/pkg/gbc/memory",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gbc/memory/cartridge:go_default_library",
        "//pkg/gbc/memory/lib:go_default_library",
        "//pkg/gbc/memory/mbcs:go_default_library",
        "//pkg/gbc/memory/segments:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["mmu_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/suite:go_default_library"],
)
