load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "errors.go",
        "mbc.go",
        "mbc1.go",
        "mbc2.go",
        "mbc3.go",
        "mbc5.go",
        "mbc_wrapper.go",
        "rom_only.go",
        "selector.go",
    ],
    importpath = "nebula-go/pkg/gbc/memory/mbcs",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gbc/memory/lib:go_default_library",
        "//pkg/gbc/memory/segments:go_default_library",
        "@org_uber_go_multierr//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "mbc1_test.go",
        "mbc_wrapper_test.go",
        "rom_only_test.go",
        "selector_test.go",
        "suite_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/gbc/memory/lib:go_default_library",
        "//pkg/gbc/memory/segments:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
