load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bit_proxy.go",
        "byte.go",
        "dbyte.go",
        "dbyte_split_byte.go",
        "flag.go",
    ],
    importpath = "nebula-go/pkg/gbc/memory/registers",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "bit_proxy_test.go",
        "byte_test.go",
        "dbyte_split_byte_test.go",
        "dbyte_test.go",
        "flag_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
