load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "address_range.go",
        "banks_config.go",
        "errors.go",
        "segment.go",
    ],
    importpath = "nebula-go/pkg/gbc/memory/segments",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "address_range_test.go",
        "banks_config_test.go",
        "segment_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
    ],
)
