load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "flags.go",
        "interrupt.go",
        "registers.go",
    ],
    importpath = "nebula-go/pkg/gbc/z80/lib",
    visibility = ["//visibility:public"],
    deps = ["//pkg/gbc/memory/registers:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "flags_test.go",
        "interrupt_test.go",
        "registers_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
