load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["factory.go"],
    importpath = "nebula-go/pkg/gbc/z80/opcodes",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gbc/memory:go_default_library",
        "//pkg/gbc/z80/lib:go_default_library",
        "//pkg/gbc/z80/opcodes/alu:go_default_library",
        "//pkg/gbc/z80/opcodes/controlflow:go_default_library",
        "//pkg/gbc/z80/opcodes/load:go_default_library",
        "//pkg/gbc/z80/opcodes/misc:go_default_library",
        "//pkg/gbc/z80/opcodes/misc/cb:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["suite_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/gbc/memory:go_mocks_library",
        "//pkg/gbc/z80/lib:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
