load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "flags.go",
        "registers.go",
    ],
    importpath = "nebula-go/pkg/gbc/z80/registers",
    visibility = ["//visibility:public"],
    deps = ["//pkg/gbc/z80/registers/lib:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "flags_test.go",
        "registers_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
