load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "factory.go",
        "logical_adc.go",
        "logical_add.go",
        "logical_and.go",
        "logical_compare.go",
        "logical_decrement.go",
        "logical_helpers.go",
        "logical_increment.go",
        "logical_or.go",
        "logical_sbc.go",
        "logical_sub.go",
        "logical_xor.go",
    ],
    importpath = "nebula-go/pkg/gbc/z80/opcodes/alu",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/common/bitwise:go_default_library",
        "//pkg/gbc/memory:go_default_library",
        "//pkg/gbc/z80/opcodes/lib:go_default_library",
        "//pkg/gbc/z80/registers:go_default_library",
        "//pkg/gbc/z80/registers/lib:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "logical_adc_test.go",
        "logical_add_test.go",
        "logical_and_test.go",
        "logical_compare_test.go",
        "logical_decrement_test.go",
        "logical_increment_test.go",
        "logical_or_test.go",
        "logical_sbc_test.go",
        "logical_sub_test.go",
        "logical_xor_test.go",
        "suite_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/common/testhelpers:go_default_library",
        "//pkg/gbc/memory:go_default_library",
        "//pkg/gbc/z80/opcodes/lib:go_default_library",
        "//pkg/gbc/z80/opcodes/testhelpers:go_default_library",
        "//pkg/gbc/z80/registers:go_default_library",
        "//pkg/gbc/z80/registers/lib:go_default_library",
    ],
)
