load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "call.go",
        "factory.go",
        "helpers.go",
        "jump.go",
        "jump_relative.go",
        "return.go",
    ],
    importpath = "nebula-go/pkg/gbc/z80/opcodes/controlflow",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gbc/memory:go_default_library",
        "//pkg/gbc/memory/registers:go_default_library",
        "//pkg/gbc/z80/lib:go_default_library",
        "//pkg/gbc/z80/opcodes/lib:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "call_test.go",
        "jump_relative_test.go",
        "jump_test.go",
        "return_test.go",
        "suite_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/common/testhelpers:go_default_library",
        "//pkg/gbc/memory:go_default_library",
        "//pkg/gbc/memory/registers:go_default_library",
        "//pkg/gbc/z80/lib:go_default_library",
        "//pkg/gbc/z80/opcodes/lib:go_default_library",
        "//pkg/gbc/z80/opcodes/testhelpers:go_default_library",
    ],
)
